chore: styled-components 적용 및 스타일 컴포넌트용 스타일린터 플러그인 적용

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,13 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.stylelint": "always",
     "source.fixAll.eslint": "always"
-  }
+  },
+  "stylelint.validate": [
+    "css",
+    "postcss",
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact"
+  ]
 }
