--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,4 @@
 {
-  "extends": "stylelint-config-standard",
-  "plugins": ["stylelint-order"],
-  "rules": {
-    "order/properties-alphabetical-order": true
-  }
+  "customSyntax": "postcss-styled-syntax",
+  "extends": ["stylelint-config-standard", "stylelint-config-recess-order"]
 }
