--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": ["dom", "dom.iterable", "esnext", "WebWorker"],
+    "types": ["vite-plugin-pwa/client"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
