--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "lint:css": "stylelint \"**/*.{css}\""
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.1",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
