--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint:css": "stylelint \"**/*.{css}\""
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.63.0",
     "@types/react-router-dom": "^5.3.3",
     "framer-motion": "^11.16.0",
     "react": "^18.3.1",
